# kicad

./: CMakeLists.txt
cmake/: Findspnav.cmake
eeschema/navlib/: CMakeLists.txt  nl_schematic_plugin.cpp  nl_schematic_plugin.h  nl_schematic_plugin_libspnav.cpp  nl_schematic_plugin_libspnav.h
pcbnew/navlib/: CMakeLists.txt  nl_pcbnew_plugin.cpp  nl_pcbnew_plugin.h  nl_pcbnew_plugin_libspnav.cpp  nl_pcbnew_plugin_libspnav.h
